Refactor EventController to improve event handling